# ml-trading-framework

./: .gitignore  .prettierrc.yml  README.md  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
docs/: DESIGN_DECISION_DOCUMENT.md
notebooks/: baseline_features.ipynb  data_exploration.ipynb  dataset.ipynb  feature_engineering.ipynb  model_generation.ipynb
src/: __main__.py  config.py  index.py
src/config/: __init__.py  main.py
src/data/: __init__.py  config.py  create_dataframe.py  data_loader.py  dataset.py  download_dataset.py  exploring_dataframe.py  kaggle_downloader.py  main.py  plot_missing_values.py  process_dataset.py  split_dataset.py  to_timestamp_csv.py
src/features/: __init__.py  calculate_technical_indicators.py  config.py  features.py  generate_bull_bear_signals.py  main.py  plot_target_correlation.py  technical_indicators.py
src/models/: __init__.py  evaluate_models.py  main.py  models.py  selected_models.py
src/utils/: __init__.py  logger.py
src/visualization/: __init__.py  plot_correlation_matrix.py  plot_line.py  plot_missing_data.py  plot_missing_values.py  plot_model_results.py  plot_time_series.py
