[project]
name = "ml-trading-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Reichhart",email = "daniel.reichhart@gmx.net"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "numpy (>=1.26.0,<2.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
