[project]
name = "ml-trading-framework"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Reichhart", email = "daniel.reichhart@gmx.net" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "kaggle (>=1.7.4.2,<2.0.0.0)",
    "keras (>=3.9.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
