[project]
name = "ml-trading-framework"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Reichhart", email = "daniel.reichhart@gmx.net" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost (>=1.2.7,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipython (>=9.1.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "kaggle (>=1.7.4.2,<2.0.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "numpy (>=1.16.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.47.1,<0.48.0)",
    "xgboost (>=3.0.0,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^25.1.0" }
